# full-batch

./: CMakeLists.txt  CMakeLists.txt~  important links.txt  main.cpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  main
build3/: CMakeCache.txt  Makefile  batch3dMapMerge.g2o  cmake_install.cmake  main
build3/data/loop1/: Tr_local_1.txt  traj1.g2o
build3/data/loop2/: traj2.g2o
build3/data/merging/: merging_without_inliers.g2o  traj1_traj2_quat.g2o  traj1_traj2_with_inliers.g2o
includes/: demoDetector.h  helperfunctions.h
src/: helperfunctions.cpp
